# riccati

./: .bazelrc  .clang-format  BUILD.bazel  MODULE.bazel  README.md  example.cpp
riccati/: BUILD.bazel  lapack_compat.h  lapack_wrappers.cpp  lapack_wrappers.h  riccati.cpp  riccati.h
test/: BUILD.bazel  test_lapack_wrappers.cpp  test_riccati.cpp
