"""
Build rules for the 'riccati' project.
"""

# https://registry.bazel.build/modules/platforms
bazel_dep(name = "platforms", version = "1.0.0")

# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.17.0")

# https://registry.bazel.build/modules/eigen
bazel_dep(name = "eigen", version = "4.0.0-20241125")

# https://registry.bazel.build/modules/abseil-cpp
bazel_dep(name = "abseil-cpp", version = "20250512.0")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    # For Abseil, until https://github.com/hedronvision/bazel-compile-commands-extractor/pull/219
    # merges:
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor",
    # Replace the commit hash (above) with the latest,
    # https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main.
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the
    # README).
)
