cc_test(
    name = "test_lapack_wrappers",
    size = "small",
    srcs = ["test_lapack_wrappers.cpp"],
    deps = [
        "//riccati:lapack_wrappers",
        "@eigen",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_riccati",
    size = "small",
    srcs = ["test_riccati.cpp"],
    deps = [
        "//riccati:riccati",
        "@eigen",
        "@googletest//:gtest_main",
    ],
)
